@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<metadata>
+  <version>0.1</version>
+  <dependencies>
+      <dependency>profile-izug.basetheme:plone3</dependency>
+  </dependencies>
+</metadata>
