@@ -1,0 +1,14 @@
+<?xml version="1.0"?>
+<object name="portal_skins" allow_any="False" cookie_persistence="False"
+   default_skin="iZug Base Theme">
+
+ <object name="izug_zugch"
+    meta_type="Filesystem Directory View"
+    directory="izug.basetheme:skins/izug_izug"/>
+
+ <skin-path name="iZug Base Theme" based-on="Plone Classic Theme">
+  <layer name="izug_izug"
+     insert-before="custom"/>
+ </skin-path>
+
+</object>
